@@ -1,3 +1,5 @@
+- WebAuth: Add support for "force_reapprove" parameter.
+
 ---------------------------------------------
 1.1.5 (2015-02-23)
 
